// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudFormation Test 1`] = `
Object {
  "DependsOn": Array [
    "ItemsApiDataSourceQueryGetUser85089BF2",
    "ItemsApiSchemaDC216D83",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Fn::GetAtt": Array [
        "ItemsApi3788C05C",
        "ApiId",
      ],
    },
    "DataSourceName": "DataSourceQueryGetUser",
    "FieldName": "getUser",
    "Kind": "UNIT",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;

exports[`CloudFormation Test 2`] = `
Object {
  "DependsOn": Array [
    "ItemsApiDataSourceQueryListUsersB20E9633",
    "ItemsApiSchemaDC216D83",
  ],
  "Properties": Object {
    "ApiId": Object {
      "Fn::GetAtt": Array [
        "ItemsApi3788C05C",
        "ApiId",
      ],
    },
    "DataSourceName": "DataSourceQueryListUsers",
    "FieldName": "listUsers",
    "Kind": "UNIT",
    "TypeName": "Query",
  },
  "Type": "AWS::AppSync::Resolver",
}
`;
